<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<!-- Ignore MergeRootFrame: we need a single container View where we can attach fragments, so
     we definitely need to keep this FrameLayout (i.e. we can't <merge> here). -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenshotViewerBackground"
    tools:ignore="MergeRootFrame">

    <ImageView
        android:id="@+id/screenshot_viewer_image_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/screenshots_error" />

    <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
        android:id="@+id/screenshot_viewer_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/screenshot_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/screenshot_viewer_btm_toolbar"
        style="@style/ScreenshotViewBottomToolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorScreenshotViewerToolBarBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorScreenshotViewerToolBarBLineBorder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/screenshot_viewer_btn_open_url"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@drawable/image_viewer_btn_bg_selector"
                    android:scaleType="centerInside"
                    android:src="@drawable/action_openinbrowser"
                    android:tint="@color/image_view_btn_tint_color_selector" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/screenshot_viewer_btn_edit"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@drawable/image_viewer_btn_bg_selector"
                    android:scaleType="centerInside"
                    android:src="@drawable/action_edit"
                    android:tint="@color/image_view_btn_tint_color_selector" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/screenshot_viewer_btn_share"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@drawable/image_viewer_btn_bg_selector"
                    android:scaleType="centerInside"
                    android:src="@drawable/action_share"
                    android:tint="@color/image_view_btn_tint_color_selector" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/screenshot_viewer_btn_info"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@drawable/image_viewer_btn_bg_selector"
                    android:scaleType="centerInside"
                    android:src="@drawable/action_info"
                    android:tint="@color/image_view_btn_tint_color_selector" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/screenshot_viewer_btn_delete"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@drawable/image_viewer_btn_bg_selector"
                    android:scaleType="centerInside"
                    android:src="@drawable/menu_delete"
                    android:tint="@color/image_view_btn_tint_color_selector" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
</RelativeLayout>

