...
    <LinearLayout
        android:id="@+id/text_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_toEndOf="@+id/img"
        android:layout_toStartOf="@+id/menu_action"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/title"
            style="@style/DownloadListMainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDownloadText"
            android:textSize="14sp"
            android:maxLines="1"
...
