...
    <string name="setting_dialog_form_history">Form history</string>
    <string name="setting_dialog_cookies">Cookies</string>
    <string name="setting_dialog_cache">Cache</string>

    <!-- Download list-->
    <string name="no_downloads">No downloads</string>
    <string name="download_started">Downloading…</string>
    <string name="download_file_not_supported">Download protocol not supported</string>
    <string name="cannot_find_the_file">Cannot find the file</string>
    <string name="cannot_delete_the_file">Cannot delete the file.</string>
    <string name="download_completed">%1$s downloaded</string>
    <string name="download_deleted">%1$s was deleted</string>
    <string name="download_cancel">Download canceled</string>
...
    <string name="browsing_history_date_yesterday">Yesterday</string>
    <string name="browsing_history_menu_delete">Delete</string>
    <string name="browsing_history_dialog_confirm_clear_message">Clear all browsing history?</string>
    <string name="browsing_history_dialog_btn_clear">Clear</string>

    <!-- Remove the item from Download file panel -->
    <string name="remove_from_list">Remove from list</string>

    <!-- Remove the item from Download file panel and delete the file -->
    <string name="delete_file">Delete file</string>

    <!-- Long Screenshot -->
    <!-- Message that is shown for a few seconds after a successful screenshot capture. -->
...
